5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1838_1276.log
== TEST (2019-06-26 00:07:40) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:09:07) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:09:15) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- EXECUTION TIME:
1.03162
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:09:55) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:10:33) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((len(M)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:11:04) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros(7),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
File "XXXX", line 3
    v = zeros(7),dtype = int)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:11:16) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
File "XXXX", line 3
    v = zeros((7)),dtype = int)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:11:29) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = (zeros((7)),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
File "XXXX", line 3
    v = (zeros((7)),dtype = int)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:11:42) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
for i in range(len(M)):
	for j in range(len(M)):
		v[i]+=M[j][i]
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:12:16) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M)):
		v[k]+=M[j][i]
	k+=1
maior = v.max()
print(v)
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:12:41) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M)):
		v[k]+=M[j][i]
	k+=1
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- EXECUTION TIME:
0.933229
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:13:23) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for j in range(len(M)):
	for i in range(len(M)):
		v[j]+=M[j][i]
print(v)
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:14:01) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M)):
		v[j]+=M[i][j]
print(v)
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 00:14:21) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
print(v)
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:14:33) 
-- CODE:
from numpy import *
M =  array(eval(input("")))
v = zeros((7),dtype = int)
k= 0
for i in range(len(M)):
	for j in range(len(M[0])):
		v[j]+=M[i][j]
maior = v.max()
for i in range(len(v)):
	if(v[i] == maior):
		print(i+1)

-- EXECUTION TIME:
1.15744
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
